--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "knex": "^0.14.6",
-    "pg": "^7.4.3"
+    "pg": "^7.4.3",
+    "uuid": "^3.2.1"
   }
 }
